code25_all/scala/6288412.txt
scala> val a:Byte = 1
a: Byte = 1

scala> a.toHexString

res0: String = 1

scala> val a:Byte = 1
a: Byte = 1

scala> a.toHexString
<console>:9: error: value toHexString is not a member of Byte
       a.toHexString
         ^

